# PhantomCodec

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  Cargo.toml  INSPIRATION.md  LICENSE  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  nightly.yml  release.yml
benches/: codec_performance.rs
examples/: fixed_width_demo.rs  packed4_demo.rs  qos_demo.rs  stm32_dma_demo.rs
src/: bitwriter.rs  buffer.rs  error.rs  fixed_width.rs  lib.rs  lpc.rs  qos.rs  rice.rs  simd.rs  strategy.rs  tans.rs  varint.rs
