[package]
name = "phantomcodec"
version = "0.1.0"
edition = "2021"
authors = ["Phantom Team <youssef@elabbassi.com>"]
license = "MIT"
description = "Real-time lossless compression for high-density neural data (1,024+ channels)"
repository = "https://github.com/yelabb/PhantomCodec"
keywords = ["neural", "compression", "embedded", "no_std", "bci"]
categories = ["compression", "embedded", "no-std", "science"]

[dependencies]

[dev-dependencies]
# proptest = { version = "1.4", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = []
simd = []
cortex-m-dsp = ["cortex-m"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true

# Note: This example is designed for embedded targets only
# It will not build on x86_64/desktop platforms due to #![no_main]
# To build for embedded: cargo build --example stm32_dma_demo --target thumbv7em-none-eabihf --no-default-features --features cortex-m-dsp
# [[example]]
# name = "stm32_dma_demo"
# required-features = ["cortex-m-dsp"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies.cortex-m]
version = "0.7"
optional = true
default-features = false
